--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-transition-group": "^4.4.11",
     "react-router-dom": "^6.26.2",
     "typescript": "^4.9.5"
   }
